# chat-with-structured-data

./: .gitignore  README.md  main.py  main_routes.py  pyproject.toml
src/: data_analysis_assistant.py
src/agents/: llm_provider.py  query_preprocessor_agent.py  sql_agent.py
src/data_handler/: sqlite_handler.py  utils.py
src/schemas/: sql_agent_state.py  sql_query_model.py  user_session_model.py
src/vis/: data_formatter.py  plotter.py
